
== BioNetGen-2.2.6-testing ==

* Added new visualization tools: visualize() action and visualize.pl script.

* Upgraded muParser to version 2.2.4.

* Added a 'reset_conc' argument to parameter_scan() that suppresses the call to
resetConcentrations() if set to 0 (default value is 1). This allows simulations in 
the scan to be started from the end point of the previous simulation (see below).

* Added a new bifurcate() action that takes the same arguments as parameter_scan() (except
'reset_conc'). The method automatically runs two scans, one from 'par_min' to 'par_max' and 
the other in the reverse direction. Each simulation in the scans starts from the end point 
of the previous simulation by passing 'reset_conc=>1' to parameter_scan(). Output files are
then generated for each observable containing the parameter values vs. final observable
values for both forward and reverse directions.

* Added support for compartments in writeSBML() and upgraded the supported
version of SBML to Level 2 Version 3.

* Modified 'setConcentration' action to retain parameter names in expressions 
(rather than evaluating to a number). This allows 'setConcentration' to be used 
with 'parameter_scan'. However, observables and functions are still evaluated to
numbers.

* Added $BNG_HOME/bin/sbmlTranslator, an SBML to BNGL conversion tool. sbmlTranslator
can obtain a literal translation of an SBML file. Additionally it can 'atomize' the SBML file,
 that is, infer components, binding, and modification interactions between the original species.

* Modified 'readFile' to process SBML input files using $BNG_HOME/bin/sbmlTranslator.
'readFile' will also now throw an error if the input file extension is not any
of ".bngl", ".net", or ".xml".


* Modified 'readFile' to allow specific model blocks to be read using the 'blocks' argument.
** Example: <big><tt>readFile({file=>"filename.bngl",blocks=>["parameters","seed species"]})</tt></big>
